# AutomateSTIG

./: .gitignore  .vercelignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  install-linux.sh  install-macos.sh  install-windows.ps1  install.sh  railway.toml  vercel.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  disa-corpus-watch.yml  disa-watch.yml  release.yml  stigman-staging.yml
.hermes/plans/: 2026-04-27_132034-every-disa-stig-100-percent-automation.md
content/check_packs/: active_directory.json  adobe_acrobat.json  aix_7.json  amazon_linux_2.json  amazon_linux_2023.json  ansible_tower.json  apache_2.4.json  arista_eos.json  aws_rds.json  azure_sql.json  bind_9.json  centos_7.json  cisco_aci.json  cisco_asa.json  cisco_ios.json  cisco_ios_switch.json  cisco_ios_xe_router_ndm.json  cisco_nxos.json  citrix_vad.json  crowdstrike_falcon.json  debian_11.json  debian_12.json  docker_enterprise.json  dotnet_framework.json  elasticsearch.json  exchange_2016.json  exchange_2019.json  f5_bigip.json  forescout.json  freebsd_gpos.json  gcp_cloud_sql.json  google_chrome.json  google_chrome_linux.json  hashicorp_vault.json  hyper_v.json  iis_10.json  iis_8.5.json  ios_17.json  istio.json  java_runtime.json  (+63 more)
content/coverage/: README.md  rhel8.disa-v2r7.json  rhel8.example.json  rhel8.full.json  windows_server_2022.disa-v2r8.json  windows_server_2022.example.json  windows_server_2022.full.json
content/disa-corpus/: README.md  artifacts.manifest.json  download-index.json  download-index.schema.json  regression-baseline.json  status.json
content/rule-implementations/: README.md  status.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  ui.rs
crates/cli/src/commands/: build_pack.rs  convert.rs  coverage.rs  disa_import.rs  evaluate.rs  export.rs  gen_answer.rs  import.rs  library.rs  mod.rs  remediate.rs  report.rs  status.rs  summary.rs  verify.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  answer.rs  converter.rs  coverage.rs  engine.rs  error.rs  lib.rs  library.rs  path_safety.rs  plugins.rs  remote.rs
crates/core/src/checks/: executor.rs  linux.rs  mod.rs  network.rs  registry.rs
crates/core/src/inventory/: assets.rs  credentials.rs  mod.rs  scheduler.rs
crates/core/src/models/: asset.rs  checklist.rs  finding.rs  mod.rs  scan.rs  stig.rs
crates/gui/: Cargo.toml
crates/gui/frontend/: app.js  index.html  style.css
crates/gui/src/: api.rs  disa.rs  main.rs  outbound.rs  secrets.rs  ssh.rs  state.rs  stigman.rs  winrm.rs
crates/integrations/: Cargo.toml
crates/integrations/src/: emass.rs  lib.rs  stig_manager.rs
crates/parsers/: Cargo.toml
crates/parsers/src/: ckl.rs  cklb.rs  config_dump.rs  error.rs  evidence.rs  lib.rs  util.rs  xccdf.rs
crates/remediation/: Cargo.toml
crates/remediation/src/: lib.rs
crates/stigpack/: Cargo.toml
crates/stigpack/src/: builder.rs  importer.rs  lib.rs  manifest.rs  signing.rs  verifier.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs
docs/: README.md  accreditation-dossier.md  agent-and-scheduling.md  answer-files.md  api-reference.md  architecture.md  audit-exceptions.md  bsd-collection.md  check-packs.md  cli-reference.md  connected-mode-threat-model.md  content-updates.md  coverage-policy.md  disa-100-percent-automation-charter.md  disa-automation-roadmap.md  disa-import.md  evaluation-workflow.md  field-calibration.md  gui-guide.md  installation.md  integrations.md  live-external-acceptance.md  ontap-collection.md  quickstart.md  release-hardening.md  remediation.md  replacement-readiness.md  security-model.md  stigpack.md  troubleshooting.md  validation-report.md
docs/plans/: credible-evaluatestig-replacement-plan.md
docs/website/: index.html
fixtures/: README.md
fixtures/authorized/: README.md  manifest.example.json
fixtures/bsd/: bsd_evidence_compliant.txt  bsd_evidence_findings.txt
fixtures/ckl/: windows_server_2022_sanitized.ckl
fixtures/cklb/: windows_server_2022_sanitized.cklb
fixtures/disa-xccdf/: windows_server_2022_sanitized_xccdf.xml
fixtures/exports/: emass_golden.csv  stig_manager_golden.json
fixtures/generated-candidate-evidence/: adobe_acrobat_pro_dc_continuous_stig.candidates.evidence.json  adobe_acrobat_reader_dc_continuous_track_stig.candidates.evidence.json  apache_server_2-4_windows_server_stig.candidates.evidence.json  apple_macos_14_stig.candidates.evidence.json  apple_macos_15_stig.candidates.evidence.json  can_ubuntu_22-04_lts_stig.candidates.evidence.json  can_ubuntu_24-04_stig.candidates.evidence.json  canonical_ubuntu_20-04_lts_stig.candidates.evidence.json  cisco_nx-os_switch_rtr_stig.candidates.evidence.json  crunchy_data_postgresql_stig.candidates.evidence.json  google_chrome_current_windows.candidates.evidence.json  iis_10-0_server_stig.candidates.evidence.json  kubernetes_stig.candidates.evidence.json  microsoft_windows_11_stig.candidates.evidence.json  moz_firefox_stig.candidates.evidence.json  ms_defender_antivirus.candidates.evidence.json  ms_edge_stig.candidates.evidence.json  ms_office_365_proplus_stig.candidates.evidence.json  ms_sql_server_2022_instance_stig.candidates.evidence.json  ms_windows_10_stig.candidates.evidence.json  ms_windows_server_2022_stig.candidates.evidence.json  ms_windows_server_2025_stig.candidates.evidence.json  oracle_database_19c_stig.candidates.evidence.json  oracle_linux_8_stig.candidates.evidence.json  oracle_linux_9_stig.candidates.evidence.json  rhel_7_stig.candidates.evidence.json  rhel_8_stig.candidates.evidence.json  rhel_9_stig.candidates.evidence.json  sles_15_stig.candidates.evidence.json  (+15 more)
schemas/: answer-file.schema.json  coverage-manifest.schema.json  rule-implementation.schema.json  stigpack-manifest.schema.json
scripts/: e2e-acceptance.py  generate-checkpack-coverage.py  generate-cyclonedx-sbom.py  generate-disa-coverage.py  run-live-external-acceptance.py  validate-all-coverage.py  validate-authorized-fixtures.py  validate-check-packs.py  validate-external-workflows.py  validate-rule-implementations.py
(+267 files in other folders)
