[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/parsers",
    "crates/storage",
    "crates/stigpack",
    "crates/remediation",
    "crates/integrations",
    "crates/cli",
    "crates/gui",
    "crates/tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ibadukefan/AutomateSTIG"
description = "Cross-platform STIG evaluation and compliance automation platform"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
quick-xml = { version = "0.41", features = ["serialize"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive"] }
console = "0.15"
indicatif = "0.17"

# GUI / Web server
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "limit"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"
open = "5"

# HTTP client (for DISA content fetching)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Crypto / Hashing
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
ring = "0.17"

# Compression
zip = "2"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# File system
walkdir = "2"
tempfile = "3"

# SSH / Remote
russh = "0.46"
russh-keys = "0.46"
async-trait = "0.1"

# HTTP client (for STIG-Manager integration)
# reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Regex
regex = "1"

# Workspace crates
automatestig-core = { path = "crates/core" }
automatestig-parsers = { path = "crates/parsers" }
automatestig-storage = { path = "crates/storage" }
automatestig-stigpack = { path = "crates/stigpack" }
automatestig-remediation = { path = "crates/remediation" }
automatestig-integrations = { path = "crates/integrations" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
