[package]
name = "automatestig"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AutomateSTIG CLI - STIG evaluation and compliance automation"

[[bin]]
name = "automatestig"
path = "src/main.rs"

[dependencies]
automatestig-core = { workspace = true }
automatestig-parsers = { workspace = true }
automatestig-storage = { workspace = true }
automatestig-stigpack = { workspace = true }
automatestig-remediation = { workspace = true }
automatestig-integrations = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
