[package]
name = "automatestig"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AutomateSTIG CLI - STIG evaluation and compliance automation"

[[bin]]
name = "automatestig"
path = "src/main.rs"

[dependencies]
automatestig-core = { workspace = true }
automatestig-parsers = { workspace = true }
automatestig-storage = { workspace = true }
automatestig-stigpack = { workspace = true }
automatestig-integrations = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
console = { workspace = true }
sha2.workspace = true
zip = { workspace = true }
