[package]
name = "automatestig-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core engine for AutomateSTIG - data models, rule evaluation, and STIG library management"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
