[package]
name = "automatestig-parsers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parsers for CKL, CKLB, XCCDF, SCAP, and device configuration formats"

[dependencies]
automatestig-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
