[package]
name = "automatestig-remediation"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Remediation script generation for AutomateSTIG"

[dependencies]
automatestig-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
