[package]
name = "automatestig-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite storage layer for AutomateSTIG"

[dependencies]
automatestig-core = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
